saves/test/demo_full_20240802_193545/counter_2bc/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp counter_2bc_tb.v counter_2bc.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
counter_2bc_tb.v:136: $finish called at 410000 (1ps)

iverilog cmd 2 error:

